# oci-r2-uploader

./: Cargo.toml  README.md
src/: hash_utils.rs  lib.rs  r2configs.rs
src/v2/: mod.rs  s3_upload.rs
