[package]
name = "oci-r2-uploader"
version = "0.1.2"
authors = ["Ilmin Moon <ian.ilminmoon@gmail.com>"]
edition = "2021"
description = "Rust library for converting and uploading Docker images to Cloudflare R2 Storage with customizable image and tag parameters."
license = "MIT"
repository = "https://github.com/smileostrich/oci-r2-uploader.git"

[dependencies]
anyhow = "1.0"
blake3 = "1.3.3"
tempfile = "3.2"
serde_json = "1.0"
tokio = "1.12"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
log = "0.4.17"
